matching patterns in admin. added background for skip nav to avoid contrast problem with top image

--- a/css/sass/_fall.scss
+++ b/css/sass/_fall.scss
@@ -41,6 +41,9 @@ input[type="submit"] {
     background-color: $red;
     color: $cream;
 }
+#skipnav:focus {
+    background: $fall-bg;
+}
 
 /* @end */
 
